# Fewpy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cvat_main.py  function.yaml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: new-feature.md  report-a-bug.md
.github/workflows/: check-lint.yml  publish-to-production.yml
examples/cvat/: cvat_sdk.md  cvat_server.md
examples/models/: airshot.md  airshot.py  anomalyclip.md  anomalyclip.py  fptrans.md  fptrans.py  qwen.md  qwen.py
fewpy/: __init__.py  main.py
fewpy/examples/: cvat_cli.py
fewpy/fewshotmodel/: FewShotModel.py
fewpy/models/: __init__.py
fewpy/models/Airshot/: airshot.py  config.py  test.sh
fewpy/models/Airshot/configs/fsod/R101/: test_R_101_C4_1x_subt3_a.yaml
fewpy/models/Airshot/fewx/: __init__.py
fewpy/models/Airshot/fewx/modeling/fsod/: fsod_fast_rcnn.py  fsod_rcnn.py  fsod_roi_heads.py
fewpy/models/Qwen/: config.py  qwen.py
fewpy/models/anomalyCLIP/: anomaly_clip.py  config.py
fewpy/models/anomalyCLIP/base/: prompt_ensemble.py  simple_tokenizer.py  vit.py
fewpy/models/fptrans/: config.py  fptrans.py
fewpy/models/fptrans/base/: vit.py  vit_utils.py
fewpy/util/: dataloader.py  download.py
fewpy/util/cvat/: adapter.py
fewpy/util/data/: dataset.py
fewpy/util/inference/: FewShotModel.py  preprocessor.py  register.py
notebooks/anomalyCLIP/: metal_nut-color.ipynb  metal_nut.ipynb  predict.py
notebooks/anomalyCLIP/common/: config.py  dataset.py  utils.py  vis.py
notebooks/anomalyCLIP/model/: README.md  dataset.py  logger.py  loss.py  metrics.py  prompt_ensemble.py  test.py  test_one_example.py  test_one_example.sh  train.py  utils.py  visualization.py
notebooks/anomalyCLIP/model/AnomalyCLIP_lib/: AnomalyCLIP.py  CLIP.py  build_model.py  model_load.py  simple_tokenizer.py  transform.py
notebooks/anomalyCLIP/model/generate_dataset_json/: DAGM.py  DTD.py  SDD.py  br35.py  brainmri.py  btad.py  clinicDB.py  colonDB.py  covid.py  endoTect.py  head_ct.py  isbi.py  kvasir.py  mpdd.py  mvtec.py  tn3k.py  visa.py
notebooks/anomalyCLIP/model/results/9_12_4_multiscale/zero_shot/: log.txt
notebooks/anomalyCLIP/model/results/9_12_4_multiscale_visa/zero_shot/: log.txt
