[project]
name = "fewpy"
version = "0.1.0"
description = "An Open Source project for Few-Shot Learning"
readme = "README.md"
requires-python = ">=3.11"
authors = ["The Fundação CERTI Organization"]
repository = "https://github.com/fundacaocerti/Fewpy"
license = "MIT"
keywords = [
  "few-shot-learning",
  "machine-learning",
  "meta-learning",
  "artificial-intelligence",
  "data-science",
  "computer-vision",
  "deep-learning",
  "fewpy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "detectron2",
    "ftfy>=6.3.1",
    "numpy==2.3.4",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.11.0.86",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "regex>=2025.11.3",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "setuptools==80.9.0",
    "tqdm>=4.66.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "pillow>=10.0.0",
    "transformers>=4.57.3",
    "qwen-vl-utils>=0.0.14",
    "accelerate>=1.12.0",
    "supervision>=0.27.0",
    "dropblock>=0.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.7"
]
poe = [
    "poethepoet>=0.36.0",
]

[tool.ruff]
line-length = 80
lint.extend-select = ["I", "W", "E"]

[tool.uv.extra-build-dependencies]
detectron2 = ["torch"]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
